# betterft8

./: .gitignore  CLAUDE.md  Cross.toml  README.md  betterft8.toml
.github/workflows/: build.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  main.ts
client/src/components/: Controls.svelte  DecodeList.svelte  Login.svelte  QsoPanel.svelte  RadioStatus.svelte  Settings.svelte  SetupWizard.svelte  Waterfall.svelte  WaterfallControls.svelte
client/src/lib/: messages.ts  stores.ts  websocket.ts
deploy/: betterft8.service
docs/: testing-with-radio.md
server/: Cargo.toml  Cross.toml  build.rs  ft8.adi  ft8_wrapper.c  ft8_wrapper.h  msvc_compat.h
server/ft8_lib/common/: monitor.c
server/ft8_lib/ft8/: decode.c
server/hamlib-lib/: README.md
server/src/: config.rs  main.rs  state.rs
server/src/audio/: capture.rs  mod.rs  playback.rs
server/src/dsp/: fft.rs  ft8.rs  mod.rs  waterfall.rs
server/src/engine/: logger.rs  mod.rs  qso.rs  timing.rs
server/src/radio/: hamlib.rs  hamlib_direct.rs  hamlib_ffi.rs  mod.rs
server/src/web/: messages.rs  mod.rs  server.rs  session.rs  ws_handler.rs
