[package]
name = "betterft8-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
cpal = "0.15"
realfft = "3"
num-complex = "0.4"
base64 = { version = "0.22", features = ["std"] }
ringbuf = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
mime_guess = "2"
serialport = "4"

[features]
default = ["hamlib"]
hamlib = []

[build-dependencies]
cc = "1"
zip = "2"
